# dsp_preprocessing

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
audio_dsp/: CMakeLists.txt
audio_dsp/include/: audio_dsp_fft.h  hann_window_compute.h  mel_spectrogram.h  power_spectrum.h  power_to_decibel.h
audio_dsp/include/precomputed_hann/: hann_window_no_scale_1024.h  hann_window_with_scale_1024.h
audio_dsp/include/precomputed_mel/: mel_centre_frequencies_float_32.h  mel_centre_frequencies_next_bin_32.h  mel_centre_frequencies_prev_bin_32.h  mel_frequency_weights_32.h
audio_dsp/include/precomputed_mel/mel_centre_frequencies_float/: mel_centre_frequencies_float_mel_32_fft_1024_sr_22048.h  mel_centre_frequencies_float_mel_32_fft_1024_sr_22048_fmax_0.h  mel_centre_frequencies_float_mel_32_fft_1024_sr_22048_fmax_8000.h  mel_centre_frequencies_float_mel_32_fft_1024_sr_44100.h  mel_centre_frequencies_float_mel_32_fft_1024_sr_44100_fmax_0.h  mel_centre_frequencies_float_mel_32_fft_1024_sr_44100_fmax_8000.h  mel_centre_frequencies_float_mel_32_fft_2048_sr_22048_fmax_0.h  mel_centre_frequencies_float_mel_32_fft_2048_sr_22048_fmax_8000.h  mel_centre_frequencies_float_mel_32_fft_2048_sr_44100_fmax_0.h  mel_centre_frequencies_float_mel_32_fft_2048_sr_44100_fmax_8000.h  mel_centre_frequencies_float_mel_64_fft_1024_sr_22048.h  mel_centre_frequencies_float_mel_64_fft_1024_sr_22048_fmax_0.h  mel_centre_frequencies_float_mel_64_fft_1024_sr_22048_fmax_8000.h  mel_centre_frequencies_float_mel_64_fft_1024_sr_44100.h  mel_centre_frequencies_float_mel_64_fft_1024_sr_44100_fmax_0.h  mel_centre_frequencies_float_mel_64_fft_1024_sr_44100_fmax_8000.h  mel_centre_frequencies_float_mel_64_fft_2048_sr_22048_fmax_0.h  mel_centre_frequencies_float_mel_64_fft_2048_sr_22048_fmax_8000.h  mel_centre_frequencies_float_mel_64_fft_2048_sr_44100_fmax_0.h  mel_centre_frequencies_float_mel_64_fft_2048_sr_44100_fmax_8000.h
audio_dsp/include/precomputed_mel/mel_centre_frequencies_next_bin/: mel_centre_frequencies_next_bin_mel_32_fft_1024_sr_22048.h  mel_centre_frequencies_next_bin_mel_32_fft_1024_sr_22048_fmax_0.h  mel_centre_frequencies_next_bin_mel_32_fft_1024_sr_22048_fmax_8000.h  mel_centre_frequencies_next_bin_mel_32_fft_1024_sr_44100.h  mel_centre_frequencies_next_bin_mel_32_fft_1024_sr_44100_fmax_0.h  mel_centre_frequencies_next_bin_mel_32_fft_1024_sr_44100_fmax_8000.h  mel_centre_frequencies_next_bin_mel_32_fft_2048_sr_22048_fmax_0.h  mel_centre_frequencies_next_bin_mel_32_fft_2048_sr_22048_fmax_8000.h  mel_centre_frequencies_next_bin_mel_32_fft_2048_sr_44100_fmax_0.h  mel_centre_frequencies_next_bin_mel_32_fft_2048_sr_44100_fmax_8000.h  mel_centre_frequencies_next_bin_mel_64_fft_1024_sr_22048.h  mel_centre_frequencies_next_bin_mel_64_fft_1024_sr_22048_fmax_0.h  mel_centre_frequencies_next_bin_mel_64_fft_1024_sr_22048_fmax_8000.h  mel_centre_frequencies_next_bin_mel_64_fft_1024_sr_44100.h  mel_centre_frequencies_next_bin_mel_64_fft_1024_sr_44100_fmax_0.h  mel_centre_frequencies_next_bin_mel_64_fft_1024_sr_44100_fmax_8000.h  mel_centre_frequencies_next_bin_mel_64_fft_2048_sr_22048_fmax_0.h  mel_centre_frequencies_next_bin_mel_64_fft_2048_sr_22048_fmax_8000.h  mel_centre_frequencies_next_bin_mel_64_fft_2048_sr_44100_fmax_0.h  mel_centre_frequencies_next_bin_mel_64_fft_2048_sr_44100_fmax_8000.h
audio_dsp/include/precomputed_mel/mel_centre_frequencies_prev_bin/: mel_centre_frequencies_prev_bin_mel_32_fft_1024_sr_22048.h  mel_centre_frequencies_prev_bin_mel_32_fft_1024_sr_22048_fmax_0.h  mel_centre_frequencies_prev_bin_mel_32_fft_1024_sr_22048_fmax_8000.h  mel_centre_frequencies_prev_bin_mel_32_fft_1024_sr_44100.h  mel_centre_frequencies_prev_bin_mel_32_fft_1024_sr_44100_fmax_0.h  mel_centre_frequencies_prev_bin_mel_32_fft_1024_sr_44100_fmax_8000.h  mel_centre_frequencies_prev_bin_mel_32_fft_2048_sr_22048_fmax_0.h  mel_centre_frequencies_prev_bin_mel_32_fft_2048_sr_22048_fmax_8000.h  mel_centre_frequencies_prev_bin_mel_32_fft_2048_sr_44100_fmax_0.h  mel_centre_frequencies_prev_bin_mel_32_fft_2048_sr_44100_fmax_8000.h  mel_centre_frequencies_prev_bin_mel_64_fft_1024_sr_22048.h  mel_centre_frequencies_prev_bin_mel_64_fft_1024_sr_22048_fmax_0.h  mel_centre_frequencies_prev_bin_mel_64_fft_1024_sr_22048_fmax_8000.h  mel_centre_frequencies_prev_bin_mel_64_fft_1024_sr_44100.h  mel_centre_frequencies_prev_bin_mel_64_fft_1024_sr_44100_fmax_0.h  mel_centre_frequencies_prev_bin_mel_64_fft_1024_sr_44100_fmax_8000.h  mel_centre_frequencies_prev_bin_mel_64_fft_2048_sr_22048_fmax_0.h  (+3 more)
audio_dsp/python_interface/: audio_dsp.py  audio_dsp_c.py
audio_dsp/python_unit_test/: test_audio_fft.py  test_convert_power_to_decibel.py  test_hann_window.py  test_mel_compute.py  test_mel_spectrogram.py  test_power_spectrum.py  test_power_to_decibel.py
audio_dsp/src/: audio_dsp_fft.c  hann_window_compute.c  mel_compute.c  mel_get_precompute.c  mel_get_precomputed.c  mel_spectrogram.c  mel_utils.c  power_spectrum.c  power_to_decibel.c
audio_dsp/unit_test/: test_audio_dsp_fft.cpp  test_convert_power_to_decibel.cpp  test_hann_window.cpp  test_mel_precompute.cpp  test_mel_spectrogram.cpp  test_power_spectrum.cpp  test_power_to_decibel.cpp
examples/: .gitignore  (+1 more)
statistics/: CMakeLists.txt
statistics/include/: statistics.h
statistics/python_interface/: statistics_c.py
statistics/python_unit_test/: test_statistics.py
statistics/src/: statistics.c
statistics/unit_test/: test_statistics.cpp
statistics/unit_test/constants/: cepstrum.h  combined_stats.h  mel_spectrogram.h  mel_spectrogram_stats.h
utils/: CMakeLists.txt
utils/include/: convert_complex.h  insertion_sort.h  log_approximation.h  square_root_approximation.h
utils/python_interface/: utils_c.py
utils/python_unit_test/: plot_errors.py  test_utils.py
utils/src/: convert_complex.c  insertion_sort.c  log_approximation.c  square_root_approximation.c
utils/unit_test/: test_insertion_sort.cpp  test_log_approximation.cpp  test_logarithms_from_complex.cpp  test_magnitude_and_power_from_complex.cpp  test_magnitude_from_complex.cpp  test_square_root_approximation.cpp
(+54 files in other folders)
